--- a/managementSystem/templates/orders/edit_task_assignment.html
+++ b/managementSystem/templates/orders/edit_task_assignment.html
@@ -45,9 +45,20 @@
                         <label for="price_per_task" class="form-label">Price Per Task</label>
                         <input type="number" step="0.01" name="price_per_task" id="price_per_task" value="{{ task.price_per_task }}" class="form-control" required>
                     </div>
+
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label class="form-label">Status<span class="text-danger ms-1">*</span></label>
+                            <select class="select" name="status">
+                                <option value="Pending" {% if task.order_item.status == "Pending" %}selected{% endif %}>Pending</option>
+                                <option value="Completed" {% if task.order_item.status == "Completed" %}selected{% endif %}>Completed</option>
+                                <option value="In progress" {% if task.order_item.status == "In progress" %}selected{% endif %}>In progress</option>
+                            </select>
+                        </div>
+                    </div>
             
                     <!-- Submit -->
-                    <button type="submit" class="btn btn-primary">Update Workers</button>
+                    <button type="submit" class="btn btn-primary">Update Oder Item</button>
                     <a href="{% url 'managementSystem:view_po' task.order_item.po.id %}" class="btn btn-secondary">Cancel</a>
                 </form>
             </div>
