--- a/templates/base.html
+++ b/templates/base.html
@@ -81,8 +81,8 @@
                                         <li><a class="dropdown-item d-flex align-items-center" href=" {% url 'workers:worker_list' %}"><i class="ti ti-user me-2"></i>Employee</a></li>
                                         <li><a class="dropdown-item d-flex align-items-center" href="{% url 'managementSystem:register_client' %}"><i class="ti ti-users-plus me-2"></i>Client</a></li>
                                         <li><a class="dropdown-item d-flex align-items-center" href="{% url 'managementSystem:create_order' %}"><i class="ti ti-progress-check me-2"></i>Purchase Order</a></li>
-                                        <li><a class="dropdown-item d-flex align-items-center" href="users.html"><i class="ti ti-users me-2"></i>Users</a></li>
-                                        <li><a class="dropdown-item d-flex align-items-center" href="manual-time.html"><i class="ti ti-clock me-2"></i>Manual Time</a></li>
+                                        <li><a class="dropdown-item d-flex align-items-center" href="#"><i class="ti ti-users me-2"></i>Users</a></li>
+                                        <li><a class="dropdown-item d-flex align-items-center" href="#"><i class="ti ti-clock me-2"></i>Manual Time</a></li>
                                     </ul>
                                 </div>
                                 <span class="badge badge-md bg-soft-primary badge-time d-inline-flex align-items-center" id="clock">
@@ -516,7 +516,7 @@
                             </li>
                         </ul>
                         <div class="sidebar-footer">
-                            <p class="fs-13 copyright">Copyright 2025 - <a href="#" class="link-primary">Macdev</a></p>
+                            <p class="fs-13 copyright">Copyright 2025 - <a href="https://www.behance.net/macdevbiz" class="link-primary">Macdev</a></p>
                         </div>
                     </div>
                 </div>
