--- a/templates/base.html
+++ b/templates/base.html
@@ -81,8 +81,6 @@
                                         <li><a class="dropdown-item d-flex align-items-center" href=" {% url 'workers:worker_list' %}"><i class="ti ti-user me-2"></i>Employee</a></li>
                                         <li><a class="dropdown-item d-flex align-items-center" href="{% url 'managementSystem:register_client' %}"><i class="ti ti-users-plus me-2"></i>Client</a></li>
                                         <li><a class="dropdown-item d-flex align-items-center" href="{% url 'managementSystem:create_order' %}"><i class="ti ti-progress-check me-2"></i>Purchase Order</a></li>
-                                        <li><a class="dropdown-item d-flex align-items-center" href="#"><i class="ti ti-users me-2"></i>Users</a></li>
-                                        <li><a class="dropdown-item d-flex align-items-center" href="#"><i class="ti ti-clock me-2"></i>Manual Time</a></li>
                                     </ul>
                                 </div>
                                 <span class="badge badge-md bg-soft-primary badge-time d-inline-flex align-items-center" id="clock">
@@ -488,23 +486,8 @@
                             <li>
                                 <ul>
                                     <li>
-                                        <a href="#">
-                                            <i class="ti ti-chart-infographic"></i><span>Weekly</span><span class="track-icon"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti ti-graph"></i><span>Monthly</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti ti-license"></i><span>Yearly</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti ti-calendar"></i><span>Daily</span>
+                                        <a href="{% url 'managementSystem:reports_view' %}">
+                                            <i class="ti ti-chart-infographic"></i><span>Report</span><span class="track-icon"></span>
                                         </a>
                                     </li>
                                     <li>
