--- a/templates/base.html
+++ b/templates/base.html
@@ -122,7 +122,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                {% comment %} <div class="me-2 notification_item">
+                                <div class="me-2 notification_item">
                                     <a href="#" class="btn btn-menubar position-relative me-1" id="notification_popup" data-bs-toggle="dropdown" data-bs-auto-close="outside">
                                         <i class="ti ti-bell-check"></i>
                                         <span class="position-absolute badge bg-danger"></span>
@@ -291,32 +291,23 @@
                                             <a href="notifications.html" class="btn btn-primary btn-sm d-inline-flex align-items-center">View All Notifications<i class="ti ti-chevron-right ms-1"></i></a>
                                         </div>
                                     </div>
-                                </div> {% endcomment %}
+                                </div>
                                 <div class="dropdown profile-dropdown">
                                     <a href="javascript:void(0);" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown" data-bs-auto-close="outside">
                                         <span class="avatar avatar-md">
-                                            <img src="{% static 'img/profiles/avatar-01.jpg' %}" alt="Img" class="img-fluid rounded-circle">
+                                            <img src="{% static 'img/user.png' %}" alt="Img" class="img-fluid rounded-circle">
                                         </span>
                                     </a>
                                     <div class="dropdown-menu p-2">
                                         <div class="profileset d-flex align-items-center bg-dark p-3 mb-2">
                                             <span class="user-img me-2">
-                                                <img src="{% static 'img/profiles/avatar-01.jpg' %}" alt="">
+                                                <img src="{% static 'img/user.png' %}" alt="">
                                             </span>
                                             <div>
                                                 <h6 class="text-white mb-1">{{ request.user.username }}</h6>
                                                 <p class="fs-13 text-light">Manager</p>
                                             </div>
                                         </div>
-                                        <a class="dropdown-item d-flex align-items-center" href="profile.html">
-                                            <i class="ti ti-user me-2"></i>Profile Settings
-                                        </a>
-                                        <a class="dropdown-item d-flex align-items-center" href="reports.html">
-                                            <i class="ti ti-file-text me-2"></i>Reports
-                                        </a>
-                                        <a class="dropdown-item d-flex align-items-center" href="profile-settings.html">
-                                            <i class="ti ti-settings-2 me-2"></i>Settings
-                                        </a>
                                         {% comment %} <div class="py-2 px-3">
                                             <h6 class="mb-2">Switch Account</h6>
                                             <a href="javascript:void(0)" class="btn btn-success btn-sm w-100">
