--- a/workers/templates/workers/workers.html
+++ b/workers/templates/workers/workers.html
@@ -122,7 +122,7 @@
                                     {% else %}
                                         <div class="d-flex align-items-center">
                                             <a href="{% url 'workers:worker_profile' worker.id %}" class="avatar avatar-rounded">
-                                                No photo
+                                                <img src="{% static 'img/user.png' %}" class="img-fluid" alt="img">
                                             </a>
                                         </div>
                                     {% endif %}
