--- a/workers/templates/workers/workers.html
+++ b/workers/templates/workers/workers.html
@@ -14,7 +14,7 @@
                         <nav>
                             <ol class="breadcrumb breadcrumb-dot mb-0">
                                 <li class="breadcrumb-item">
-                                    <a href="{%url 'dashboard'%}">Home</a>
+                                    <a href="{%url 'dashboard:dashboard'%}">Home</a>
                                 </li>
                                 <li class="breadcrumb-item active" aria-current="page">Employees</li>
                             </ol>
