--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 {% block content %}
+
+
+
     <div class="main-wrapper">
         <div class="page-wrapper">
 
@@ -13,6 +16,16 @@
                         <h4 class="fw-bold">Admin Dashboard</h4>
                     </div>
                 </div>
+                {% if messages %}
+                <div class="mt-3">
+                    {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
                 <!-- head -->
 
                 <!-- time info -->
