--- a/managementSystem/templates/invoices/view_invoice.html
+++ b/managementSystem/templates/invoices/view_invoice.html
@@ -10,7 +10,6 @@
                 <!-- Breadcrumb -->
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <a href="{% url 'managementSystem:view_po' po.id %}" class="fw-medium"><i class="ti ti-circle-arrow-left text-primary me-1"></i>Invoice Details</a>
-                    <a href="javascript:void(0);" class="text-primary"><i class="ti ti-download me-1"></i>Download</a>
                 </div>
                 <!-- /Breadcrumb -->
 
@@ -28,7 +27,7 @@
                                 <div class=" text-end mb-3">
                                     <h5 class="text-gray-500 mb-1">Invoice No <span class="text-primary">#{{ invoice.id }}</span></h5>
                                     <p class="mb-1 fw-medium">Created Date : <span class="text-dark">{{ invoice.issued_date|date:"d M Y" }}</span> </p>
-                                    <p class="fw-medium">Due Date : <span class="text-dark">{{ invoice.due_date|date:"d M Y" }}</span> </p>
+                                    <!-- <p class="fw-medium">Due Date : <span class="text-dark">{{ invoice.due_date|date:"d M Y" }}</span> </p> -->
                                 </div>
                             </div>
                         </div>
@@ -54,7 +53,7 @@
                             <div class="col-md-2">
                                 <div class="mb-3">
                                     <p class="text-title mb-2 fw-medium">Payment Status </p>
-                                    <span class="bg-success text-white fs-10 px-1 rounded"><i class="ti ti-point-filled "></i>{{ po.status }}</span>
+                                    <span class="bg-success text-white fs-10 px-1 rounded"><i class="ti ti-point-filled "></i>{{ invoice.status }}</span>
                                 </div>
                             </div>
                         </div>
@@ -120,9 +119,9 @@
                                 <div class="mb-4">
                                     <img src="{% static 'img/nlogo.svg' %}" width="200" class="img-fluid" alt="sign">
                                 </div>
-                                <p class="text-dark mb-1">Payment Made Via bank transfer / Cheque in the name of Thomas Lawler</p>
+                                <p class="text-dark mb-1">Payment Made Via bank transfer / Cheque in the name of Madam Rachel</p>
                                 <div class="d-flex justify-content-center align-items-center">
-                                    <p class="fs-12 mb-0 me-3">Bank Name : <span class="text-dark">HDFC Bank</span></p>
+                                    <p class="fs-12 mb-0 me-3">Bank Name : <span class="text-dark">ABSA Bank</span></p>
                                     <p class="fs-12 mb-0 me-3">Account Number : <span class="text-dark">45366287987</span></p>
                                     <p class="fs-12">IFSC : <span class="text-dark">HDFC0018159</span></p>
                                 </div>
