--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14767,7 +14767,7 @@ button.swal2-cancel {
   .header #toggle_btn {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
+    display: none;
     align-items: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
