--- a/templates/base.html
+++ b/templates/base.html
@@ -51,10 +51,10 @@
                 <div class="main-header">
 
                     <div class="header-left">
-                        <a href="{% url 'dashboard' %}" class="logo">
+                        <a href="{% url 'dashboard:dashboard' %}" class="logo">
                             <img src=" {% static 'img/nlogo.png' %} " alt="Logo">
                         </a>
-                        <a href="{% url 'dashboard' %}" class="dark-logo">
+                        <a href="{% url 'dashboard:dashboard' %}" class="dark-logo">
                             <img src=" {% static 'img/nlogo.png' %} " alt="Logo">
                         </a>
                     </div>
@@ -90,7 +90,7 @@
                             <div class="d-flex align-items-center">
 
                                 <!-- Search -->
-                                <div class="input-group input-group-flat d-inline-flex me-2">
+                                <!-- <div class="input-group input-group-flat d-inline-flex me-2">
                                     <span class="input-icon-addon">
                                     <i class="ti ti-search"></i>
                                     </span>
@@ -98,14 +98,14 @@
                                     <span class="input-group-text">
                                     <kbd class="bg-gray-100 px-2">CTRL + / </kbd>
                                     </span>
-                                </div>
+                                </div> -->
                                 <!-- /Search -->
 
                                 <!-- Flag -->
                                 
                                 <!-- /Flag -->
 
-                                <div class="me-2 nav-item  dropdown theme-item">
+                                <!-- <div class="me-2 nav-item  dropdown theme-item">
                                     <a class="btn btn-menubar" data-bs-toggle="dropdown" href="javascript:void(0);" role="button">
                                         <i class="ti ti-sun-high"></i>
                                     </a>
@@ -121,7 +121,7 @@
                                             </a>
                                         </li>
                                     </ul>
-                                </div>
+                                </div> -->
                                 <div class="me-2 notification_item">
                                     <a href="#" class="btn btn-menubar position-relative me-1" id="notification_popup" data-bs-toggle="dropdown" data-bs-auto-close="outside">
                                         <i class="ti ti-bell-check"></i>
@@ -327,20 +327,12 @@
                     <div class="dropdown mobile-user-menu profile-dropdown">
                         <a href="javascript:void(0);" class="dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown" data-bs-auto-close="outside">
                             <span class="avatar avatar-md online">
-                                <img src="assets/img/profiles/avatar-01.jpg" alt="Img" class="img-fluid rounded-circle">
+                                <img src="{% static 'img/user.png' %}" alt="Img" class="img-fluid rounded-circle">
                             </span>
                         </a>
                         <div class="dropdown-menu p-2 mt-0">
-                            <a class="dropdown-item d-flex align-items-center" href="profile.html">
-                                <i class="ti ti-user me-2"></i>Profile Settings
-                            </a>
-                            <a class="dropdown-item d-flex align-items-center" href="reports.html">
-                                <i class="ti ti-file-text me-2"></i>Reports
-                            </a>
-                            <a class="dropdown-item d-flex align-items-center" href="profile-settings.html">
-                                <i class="ti ti-settings-2 me-2"></i>Settings
-                            </a>
-                            <a class="dropdown-item logout d-flex align-items-center" href="login.html">
+                            <i class="ti ti-user me-2"></i>{{ request.user.username }}
+                            <a class="dropdown-item logout d-flex align-items-center" href="{% url 'logout' %}">
                                 <i class="ti ti-logout me-2"></i>Signout
                             </a>
                         </div>
@@ -355,13 +347,13 @@
             <div class="sidebar" id="sidebar">
                 <!-- Logo -->
                 <div class="sidebar-logo">
-                    <a href="{% url 'dashboard' %}" class="logo logo-normal" style="width:110px; margin-top: -10px;">
+                    <a href="{% url 'dashboard:dashboard' %}" class="logo logo-normal" style="width:110px; margin-top: -10px;">
                         <img src=" {% static 'img/nlogo.png' %}" alt="Logo">
                     </a>
-                    <a href="{% url 'dashboard' %}" class="logo-small" style="width:110px; margin-top: -10px;">
+                    <a href="{% url 'dashboard:dashboard' %}" class="logo logo-small">
                         <img src="{% static 'img/nlogo.png' %}" alt="Logo">
                     </a>
-                    <a href="{% url 'dashboard' %}" class="dark-logo" style="width:110px; margin-top: -10px;">
+                    <a href="{% url 'dashboard:dashboard' %}" class="dark-logo">
                         <img src="{% static 'img/nlogo.png' %}" alt="Logo">
                     </a>
                 </div>
@@ -452,7 +444,7 @@
                             <li>
                                 <ul>
                                     <li>
-                                        <a href="{% url 'dashboard' %}" target="_self">
+                                        <a href="{% url 'dashboard:dashboard' %}" target="_self">
                                             <i class="ti ti-layout-grid-add"></i><span>Dashboard</span>
                                         </a>
                                     </li>
@@ -478,15 +470,26 @@
                                 <ul>
                                     <li>
                                         <a href="{% url 'managementSystem:reports_view' %}">
-                                            <i class="ti ti-chart-infographic"></i><span>Report</span><span class="track-icon"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="ti ti-report-money"></i><span>Expense</span>
+                                            <i class="ti ti-chart-infographic"></i><span>Report</span>
                                         </a>
                                     </li>
                                 </ul>
+                            </li>
+                            <li class="menu-title"><span>Backup & Restore</span></li>
+                            <li>
+                                <ul>
+                                    <li>
+                                        <a href="{% url 'managementSystem:backup' %}">
+                                            <i class="ti ti-cloud"></i><span>Backup</span><span class="track-icon"></span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" onclick="return confirm('Are you sure you want to restore the database? This will overwrite current data!')">
+                                            <i class="ti ti-restore"></i><span>Restore</span>
+                                        </a>
+                                    </li>
+                                </ul>
+
                             </li>
                         </ul>
                         <div class="sidebar-footer">
